force-app/main/default/objects/Pledges__c/Pledges__c.object-meta.xml
<CustomObject>
    <description>This tab will be used for pledges and pledge payments</description>
    <label>Pledges</label>
    <nameField>
        <label>Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>