force-app/main/default/objects/Pledges__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>R00N70000001bHXrEAM</relationshipName>
    <type>Lookup</type>
</CustomField>