force-app/main/default/objects/Pledges__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>R00N70000001bHXZEA2</relationshipName>
    <type>Lookup</type>
</CustomField>