force-app/main/default/objects/Pledges__c/fields/No_Pledge_Installments__c.field-meta.xml
<CustomField>
    <fullName>No_Pledge_Installments__c</fullName>
    <description># of Pledge installments on pledge</description>
    <label># Pledge Installments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>