force-app/main/default/objects/Pledges__c/fields/Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Amount__c</fullName>
    <label>Pledge Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>