force-app/main/default/objects/Pledges__c/fields/Pledge_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledge_End_Date__c</fullName>
    <description>Calcuates pledge end date by subtracking length of pledge from pledge start date</description>
    <formula>(No_Pledge_Installments__c*30.416) + Pledge_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge End Date</label>
    <type>Date</type>
</CustomField>