force-app/main/default/objects/Pledges__c/fields/Pledge_ID__c.field-meta.xml
<CustomField>
    <fullName>Pledge_ID__c</fullName>
    <displayFormat>P-{0000}-{MM}-{YYYY}</displayFormat>
    <label>Pledge ID</label>
    <type>AutoNumber</type>
</CustomField>