force-app/main/default/objects/Pledges__c/fields/Pledge_Payment_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Payment_Installment_Amount__c</fullName>
    <description>Calculates the pledge payment amount by the pledge amount by the number of months</description>
    <formula>Pledge_Amount__c  /  No_Pledge_Installments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge Payment Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>