force-app/main/default/objects/Pledges__c/fields/Pledge_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Start_Date__c</fullName>
    <description>Date that Pledge begins</description>
    <label>Pledge Start Date</label>
    <type>Date</type>
</CustomField>