force-app/main/default/objects/Pledges__c/fields/Pledge_Status__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Status__c</fullName>
    <label>Pledge Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>