force-app/main/default/objects/Pledges__c/fields/Program_Designation__c.field-meta.xml
<CustomField>
    <fullName>Program_Designation__c</fullName>
    <label>Program Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>